Found workaround to match_tree bug, now using static structure in OnlineDistanceCalculator, which only gets calculated in the first call, instead of defining in the heuristic file and then instantiating on create_pdb function, which worked fine on last version, in the latest FD version this results in corrupting some of the abstract operator stored hash_effects or op_costs, no idea whyman hg!

--- a/src/preprocess/CMakeLists.txt
+++ b/src/preprocess/CMakeLists.txt
@@ -17,6 +17,7 @@ set(PREPROCESS_SOURCES
     axiom
     causal_graph
     domain_transition_graph
+    h2_mutexes
     helper_functions
     max_dag
     mutex_group
@@ -24,7 +25,12 @@ set(PREPROCESS_SOURCES
     scc
     state
     successor_generator
+    timer
     variable
 )
 
 add_executable(preprocess ${PREPROCESS_SOURCES})
+# On Linux, find the rt library for clock_gettime().
+if(UNIX AND NOT APPLE)
+    target_link_libraries(preprocess rt)
+endif()
